EATON 306, 307, 309, 310 - CRUX feedback - Header

--- a/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
@@ -52,7 +52,7 @@
       a {
         display: flex;
         align-items: center;
-        padding: $spacing__sm 0;
+        padding: 20px 0;
         color: $color__white;
         cursor: pointer;
         border-bottom: 1px solid rgba(238, 240, 242, 0.5);
