--- a/eaton.frontend/src/components/header/css/_header-utility-nav.scss
+++ b/eaton.frontend/src/components/header/css/_header-utility-nav.scss
@@ -25,8 +25,11 @@
   .icon {
     position: relative;
     top: 2px;
-    margin-right: 5px;
     font-size: 1em;
+
+    &.icon-globe {
+      margin-right: 5px;
+    }
 
     &.icon-chevron-down {
       font-size: 9px;
@@ -66,13 +69,13 @@
 
     &__toggle-selector {
       padding: 25px 0 25px 30px;
-      flex-basis: 75%;
+      flex-grow: 1;
       background: $color__primary-gray1;
     }
 
     &__sign-in {
-      flex: 1;
       text-align: center;
+      padding: 0 $spacing__sm;
     }
 
     &__signin { display: none; }
