--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -6,7 +6,9 @@
 
 .header-utility-nav__sign-in { text-align: right; }
 
-.header-utility-nav .icon { position: relative; top: 2px; margin-right: 5px; font-size: 1em; }
+.header-utility-nav .icon { position: relative; top: 2px; font-size: 1em; }
+
+.header-utility-nav .icon.icon-globe { margin-right: 5px; }
 
 .header-utility-nav .icon.icon-chevron-down { font-size: 9px; top: 0; margin-left: 6px; }
 
@@ -15,8 +17,8 @@
 @media screen and (max-width: 991px) { .header-utility-nav { position: fixed; bottom: 0; z-index: 5; width: 100%; right: 0; opacity: 0; visibility: hidden; -webkit-transition: opacity 0.5s ease-in-out; transition: opacity 0.5s ease-in-out; padding: 0; }
   .header-utility-nav .container { padding: 0; }
   .header-utility-nav__row { -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-  .header-utility-nav__toggle-selector { padding: 25px 0 25px 30px; -ms-flex-preferred-size: 75%; flex-basis: 75%; background: #333F48; }
-  .header-utility-nav__sign-in { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; text-align: center; }
+  .header-utility-nav__toggle-selector { padding: 25px 0 25px 30px; -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; background: #333F48; }
+  .header-utility-nav__sign-in { text-align: center; padding: 0 30px; }
   .header-utility-nav__signin { display: none; }
   .nav-open .header-utility-nav { opacity: 1; visibility: visible; } }
 
@@ -56,7 +58,7 @@
   .nav-open .eaton-link-list-primary-nav { overflow: auto; visibility: visible; opacity: 1; }
   .nav-open .header-primary-nav__toggle-mobile-menu { -webkit-transition: background 0.3s ease-in-out; transition: background 0.3s ease-in-out; background: #333F48; }
   .nav-open .header-primary-nav__toggle-mobile-menu .icon-hamburger { display: none; }
-  .nav-open .header-primary-nav__toggle-mobile-menu .icon-close { display: block; }
+  .nav-open .header-primary-nav__toggle-mobile-menu .icon-close { display: block; top: -3px; font-size: 18px; }
   .level-2-open { overflow: hidden; position: fixed; width: 100%; }
   .level-2-open .eaton-link-list-primary-nav { -webkit-transform: translate(-100%, 0); transform: translate(-100%, 0); }
   .level-2-open .mega-menu { -webkit-transform: translate(0, 0); transform: translate(0, 0); }
