--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
@@ -53,4 +53,4 @@
 @media screen and (min-width: 992px) { .mega-menu-title { padding: 30px 0; }
   .mega-menu-title__level1-link .glyphicon-menu-left { display: none; }
   .mega-menu-title__level1-link .glyphicon-menu-right { display: inline; margin-left: 10px; }
-  .mega-menu-title__close-menu { display: inline; position: absolute; right: 0; } }
+  .mega-menu-title__close-menu { display: inline; position: absolute; right: 15px; } }
