--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-support/css/product-support.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-support/css/product-support.css
@@ -4,11 +4,9 @@
 
 @media screen and (max-width: 991px) { .product-support-component--left { margin-bottom: 30px; } }
 
-.product-support-component__icon { bottom: 110px; position: absolute; left: 25px; font-size: 60px; color: #ED8B00; }
+.product-support-component__icon { top: 10px; position: absolute; left: -60px; font-size: 60px; color: #ED8B00; }
 
-@media screen and (min-width: 768px) and (max-width: 991px) { .product-support-component__icon { bottom: 15px; left: -60px; } }
-
-@media screen and (min-width: 1200px) { .product-support-component__icon { bottom: 112px; left: -60px; } }
+@media screen and (max-width: 767px) { .product-support-component__icon { left: 25px; top: -80px; } }
 
 @media screen and (min-width: 1200px) { .product-support-component__info { margin-left: 50px; } }
 
