--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -8,8 +8,6 @@
 
 .header-utility-nav .icon { position: relative; top: 2px; font-size: 1em; }
 
-.header-utility-nav .icon.icon-globe { margin-right: 5px; }
-
 .header-utility-nav .icon.icon-chevron-down { font-size: 9px; top: 0; margin-left: 6px; }
 
 .header-utility-nav .open-country-selector, .header-utility-nav .open-sign-in { color: #FFF; text-decoration: none; }
@@ -20,10 +18,12 @@
   .header-utility-nav__toggle-selector { padding: 25px 0 25px 30px; -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; background: #333F48; }
   .header-utility-nav__sign-in { text-align: center; padding: 0 30px; }
   .header-utility-nav__signin { display: none; }
+  .header-utility-nav .icon.icon-globe { margin-right: 5px; }
   .nav-open .header-utility-nav { opacity: 1; visibility: visible; } }
 
 @media screen and (min-width: 992px) { .header-utility-nav__row { padding: 0 15px; }
-  .header-utility-nav__toggle-selector { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; } }
+  .header-utility-nav__toggle-selector { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; }
+  .header-utility-nav .icon { margin-right: 5px; } }
 
 .header-primary-nav { background: #FFF; border-bottom: 4px solid #EEF0F2; -webkit-transition: height 0.3s ease-in-out; transition: height 0.3s ease-in-out; }
 
