M-46 tabbed menu list

--- a/eaton.frontend/src/components/how-to-buy/css/how-to-buy.scss
+++ b/eaton.frontend/src/components/how-to-buy/css/how-to-buy.scss
@@ -59,11 +59,25 @@
       &.row {
         display: flex;
         flex-wrap: wrap;
+        flex-direction: row;
+
+        .col-md-4 {
+          flex: 0 0 33%;
+        }
+
+        .col-md-8 {
+          flex: 0 0 66%
+        }
 
         .row {
           margin: 0;
           display: flex;
           flex-wrap: wrap;
+          flex-direction: row;
+        }
+
+        .col-md-4 {
+          flex: 0 0 33%;
         }
       }
     }
