--- a/eaton.frontend/src/components/icon-list/css/views/_view-top-list-with-icon.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-top-list-with-icon.scss
@@ -58,11 +58,21 @@
       &.row {
         display: flex;
         flex-wrap: wrap;
+        flex-direction: row;
+
+        .col-md-4 {
+          flex: 0 0 33%;
+        }
 
         .row {
           margin: 0;
           display: flex;
           flex-wrap: wrap;
+          flex-direction: row;
+        }
+
+        .col-md-4 {
+          flex: 0 0 33%;
         }
       }
     }
