--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
@@ -1,8 +1,9 @@
 <!--/* M-62: Faceted Navigation */-->
 <template data-sly-template.module="${ @ data }">
+  <div class="faceted-navigation__mobile-facet-container"></div>
   <div class="faceted-navigation eaton-form">
 
-    <h4 class="hidden-xs">${ 'Narrow Results' @ i18n }</h4>
+    <h4 class="hidden-sm hidden-xs">${ 'Narrow Results' @ i18n }</h4>
 
     <sly data-sly-list="${ data.facetItems }">
 
