in progress mobile styling

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
@@ -9,7 +9,8 @@
     </div>
   </sly>
 
-  <div class="faceted-navigation-header">
+  <div class="faceted-navigation-header hidden-xs hidden-sm">
+    <div class="faceted-navigation-header__header-middle hidden">Filters</div>
     <div class="faceted-navigation-header__header-top">
       <div class="faceted-navigation-header__title">${ '{0} results' @ i18n, format=[ data.resultsCount ] }</div>
       <div class="faceted-navigation-header__sort-options">
