--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
@@ -6,11 +6,22 @@
 .faceted-navigation {
 
 &__mobile-facet-container{
-  display: none;
   position: absolute;
   top: 0;
   left: 0;
+  z-index:9999;
+  background-color: #fff;
+
+  .b-button{
+    width: 100%;
+    text-align:center;
+  }
+
+  .faceted-navigation-header__header-bottom{}
 }
+
+.hidden{display:none;}
+.visibile{display:block;}
 
 &__group{
   border-bottom: 1px solid #e6e6e6;
