added back-toserach component

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-product-tab.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-product-tab.html
@@ -72,6 +72,10 @@
       </div>
 
       <div class="row">
+        <sly data-sly-resource="${'back-to-search' @ resourceType='/apps/eaton/static-components/product/back-to-search'}"></sly>
+      </div>
+
+      <div class="row">
         <!-- graphic toggle use 3 panels that are hide/show via css -->
         <sly data-sly-test="${ data.graphicToggle }" >
           <div
