--- a/eaton.frontend/src/components/list/css/views/_view-related-products.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-related-products.scss
@@ -1,7 +1,6 @@
 .related-products-component {
 
-  padding-bottom: 75px;
-  padding-top: 30px;
+  padding: 30px 0;
 
   &__card {
     background-color: $color__secondary-gray6;
