--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-related-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-related-products.html
@@ -1,87 +1,8 @@
-<!--Desktop Carousel-->
-<div data-sly-use.data="${'../data/view-related-products-data.js' @testdata=properties.testdata}" class="related-products-component carousel-component carousel slide container desktop-carousel hidden-xs" data-ride="carousel" data-pause="hover">
-    <!-- Indicators -->
-    <sly data-sly-test="${data.length > 1}">
-        <ol data-sly-list.slide="${data}" class="carousel-indicators">
-            <li data-target=".carousel-component"
-                data-slide-to="${slideList.index}"
-                class="carousel-component__dots carousel-component__dots--gray ${slideList.index == 0 ? 'active' : ''}"></li>
-        </ol>
-    </sly>
-
-     <!--Carousel for Desktop -->
-    <div data-sly-list="${data}" class="carousel-component-slide carousel-inner hidden-xs" role="listbox">
-        <div class="item ${itemList.index == 0 ? 'active' : ''} hidden-xs">
-            <div class="row" data-sly-list="${item.cards}">
-                <a href="${item.link}" role="link" target="${item.target}">
-                    <div class="col-sm-3">
-                        <div class="col-xs-12 related-products-component__card">
-                            <img class="carousel-component-slide__image" src="${item.image}" alt="${item.alt}">
-                        </div>
-                        <div class="col-xs-12">
-                            <p class="b-eyebrow-small related-products-component__title">${item.title}</p>
-                            <p class="b-h4-link">${item.text}</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <!--Controls -->
-    <sly data-sly-test="${data.length > 1}">
-        <button class="carousel-component__arrow related-products-component__arrow left carousel-control button--reset"
-                role="button">
-            <span class="icon icon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Go to Previous Slide</span>
-        </button>
-        <button class="carousel-component__arrow related-products-component__arrow right carousel-control button--reset"
-                role="button">
-            <span class="icon icon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Go to Next Slide</span>
-        </button>
-    </sly>
-</div>
-
-<!--Mobile Carousel-->
-<div data-sly-use.data="${'../data/view-related-products-data.js' @testdata=properties.testdata}" class="related-products-component carousel-component carousel-component1 carousel slide container mobile-carousel visible-xs" data-ride="carousel" data-pause="hover">
-
-    <!-- Indicators -->
-    <ol data-sly-list.data="${data}" class="carousel-indicators carousel-component--indicators">
-        <sly data-sly-list.card="${data.cards}">
-            <li data-target=".carousel-component1"
-                data-slide-to="${cardList.index}"
-                class="carousel-component__dots carousel-component__dots--gray"></li>
-        </sly>
-    </ol>
-
-    <!-- Carousel for Mobile -->
-    <div data-sly-list.data="${data}" class="carousel-component-slide carousel-inner visible-xs" role="listbox">
-        <sly  data-sly-list.card="${data.cards}">
-            <div class="item">
-                <a href="${card.link}" role="link" target="${card.target}">
-                    <div class="col-xs-12 related-products-component__card">
-                        <img class="carousel-component-slide__image" src="${card.image}" alt="${card.alt}">
-                    </div>
-                    <div class="col-xs-12">
-                        <p class="b-eyebrow-small related-products-component__title">${card.title}</p>
-                        <p class="b-h4-link">${card.text}</p>
-                    </div>
-                </a>
-            </div>
+<sly data-sly-use.data="${ '../data/view-related-products-data.js' @testdata=properties.testdata }">
+    <div class="related-products-component container">
+        <sly data-sly-use.tpl="../../shared/templates/carousel.html">
+            <sly data-sly-call="${ tpl.module @data=data.cards }"></sly>
         </sly>
     </div>
-
-    <!--Controls -->
-    <button class="carousel-component__arrow related-products-component__arrow left carousel-control button--reset"
-            role="button">
-        <span class="icon icon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Go to Previous Slide</span>
-    </button>
-    <button class="carousel-component__arrow related-products-component__arrow right carousel-control button--reset"
-            role="button">
-        <span class="icon icon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Go to Next Slide</span>
-    </button>
-</div>
+</sly>
 
