--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -83,7 +83,7 @@
   .eaton-list-links__col { width: 100%; margin: 0 15px; }
   .eaton-list-links__col:first-child { margin-left: 0; } }
 
-.related-products-component { padding-bottom: 75px; padding-top: 30px; }
+.related-products-component { padding: 30px 0; }
 
 .related-products-component__card { background-color: #F8F8F8; padding: 0 15px; margin-right: 15px; border: 1px solid #EEF0F2; }
 
