Include initial styles + markup container - Primary Nav Search

--- a/eaton.frontend/src/components/header/css/header.scss
+++ b/eaton.frontend/src/components/header/css/header.scss
@@ -9,6 +9,7 @@
 // Import Sub Components
 @import "header-utility-nav";
 @import "header-primary-nav";
+@import "header-search";
 
 // Base Styles
 .eaton-header {
