Base Styles - Search Component - Header

--- a/eaton.frontend/src/components/header/css/_header-primary-nav.scss
+++ b/eaton.frontend/src/components/header/css/_header-primary-nav.scss
@@ -5,6 +5,8 @@
 $primary-nav-border: #EEF0F2;
 
 .header-primary-nav {
+  position: relative;
+  z-index: 12;
   background: $color__white;
   border-bottom: 4px solid $primary-nav-border;
   transition: height 0.3s ease-in-out;
