--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
@@ -9,20 +9,27 @@
   margin-bottom: 28px;
 
   &__header-top,
-  &__header-bottom,
-  &__active-filters,
-  &__filter-link {
+  &__header-bottom{
     display: flex;
+  }
+
+  &__filter-link, __active-filters {
+    display: inline-block;
+  }
+
+  &__active-filters {
+    width: 100%;
   }
 
   &__sort-options,
   &__filters-actions {
     margin-left: auto;
+    min-width: 85px;
   }
 
 
   &__header-bottom{
-    margin-top: 28px;
+    margin-top: 70px;
   }
 
   // Results: Header Title
@@ -43,13 +50,15 @@
 
   &__filter-link {
 
-    align-items: center;
-    display: flex;
-    margin-right: 2rem;
+    align-items: top;
+    /*display: flex;*/
+    margin-right: 12px;
+
 
     .icon {
       font-size: 10px;
-      margin-right: 1rem;
+      margin-right: 2px;
+      margin-top: 5px;
     }
 
   }
