--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
@@ -1,7 +1,7 @@
 <template data-sly-template.module="${ @ data }">
   <sly data-sly-test="${ data.autoCorrect.enabled }">
     <div class="autocorrected-search">
-      <strong>${ 'Showing results for' @ i18n } <em>${ data.keyword }</em> </strong>
+      <strong style="display:block">${ 'Showing results for' @ i18n } <em>${ data.keyword }</em> </strong>
       <strong>${ 'Search instead for' @ i18n }</strong>
       <a href="${ data.autoCorrect.url }"
         class="autocorrected-search__link"
@@ -10,7 +10,6 @@
   </sly>
 
   <div class="faceted-navigation-header hidden-xs hidden-sm">
-    <div class="faceted-navigation-header__header-middle hidden">Filters</div>
     <div class="faceted-navigation-header__header-top">
       <div class="faceted-navigation-header__title">${ '{0} results' @ i18n, format=[ data.resultsCount ] }</div>
       <div class="faceted-navigation-header__sort-options">
