--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
@@ -1,6 +1,9 @@
 <!--/* M-62: Faceted Navigation */-->
 <template data-sly-template.module="${ @ data }">
   <div class="faceted-navigation eaton-form">
+  <div class="mobile-header hidden hidden-lg hidden-md">
+    <span>Filters </span><i class="remove glyphicon glyphicon-remove glyphicon-white"></i>
+  </div>
 
     <h4 class="hidden-sm hidden-xs">${ 'Narrow Results' @ i18n }</h4>
 
@@ -89,6 +92,8 @@
       class="faceted-navigation__view-more-facets">
       <button id="view-more-facets" class="button--reset" >${ 'View more' @ i18n }</button>
     </div>
-
+    <div class="mobile-done hidden-lg hidden-md">
+      <a href="#" target="_self">Done</a>
+    </div>
   </div>
 </template>
