--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -293,99 +293,49 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .dark-theme .rich-text-container ul li::before { background-color: #FFF; }
 
-.icon::before { -moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: antialiased; -webkit-box-sizing: border-box; box-sizing: border-box; display: inline-block; font-family: "eaton-glyphicon"; font-smoothing: antialiased; font-style: normal; font-variant: normal; font-weight: normal; line-height: 1; text-decoration: inherit; text-rendering: optimizeLegibility; text-transform: none; }
-
-.icon-badge::before { content: "\EA01"; }
-
-.icon-book::before { content: "\EA02"; }
-
-.icon-bulb::before { content: "\EA03"; }
-
-.icon-calendar::before { content: "\EA04"; }
-
-.icon-chevron-down::before { content: "\EA05"; }
-
-.icon-chevron-left::before { content: "\EA06"; }
-
-.icon-chevron-right::before { content: "\EA07"; }
-
-.icon-close::before { content: "\EA08"; }
-
-.icon-doc-badge::before { content: "\EA09"; }
-
-.icon-doc-download::before { content: "\EA0A"; }
-
-.icon-doc-text::before { content: "\EA0B"; }
-
-.icon-download::before { content: "\EA0C"; }
-
-.icon-globe::before { content: "\EA0D"; }
-
-.icon-hamburger::before { content: "\EA0E"; }
-
-.icon-headset::before { content: "\EA0F"; }
-
-.icon-help::before { content: "\EA10"; }
-
-.icon-info::before { content: "\EA11"; }
-
-.icon-link-external::before { content: "\EA12"; }
-
-.icon-list-checkmark::before { content: "\EA13"; }
-
-.icon-list-items::before { content: "\EA14"; }
-
-.icon-checklist::before { content: "\EA15"; }
-
-.icon-marker::before { content: "\EA16"; }
-
-.icon-phone::before { content: "\EA17"; }
-
-.icon-plane::before { content: "\EA18"; }
-
-.icon-player-pause::before { content: "\EA19"; }
-
-.icon-player-play::before { content: "\EA1A"; }
-
-.icon-quote-dark::before { content: "\EA1B"; }
-
-.icon-quote-light::before { content: "\EA1C"; }
-
-.icon-search-minus::before { content: "\EA1D"; }
-
-.icon-search-plus::before { content: "\EA1E"; }
-
-.icon-search::before { content: "\EA1F"; }
-
-.icon-shopping-cart::before { content: "\EA20"; }
-
-.icon-sign-minus::before { content: "\EA21"; }
-
-.icon-sign-plus::before { content: "\EA22"; }
-
-.icon-tiles::before { content: "\EA23"; }
-
-.icon-tree::before { content: "\EA24"; }
-
-.icon-user::before { content: "\EA25"; }
-
 .faceted-navigation-header { margin-bottom: 28px; }
 
-.faceted-navigation-header__header-top, .faceted-navigation-header__header-bottom, .faceted-navigation-header__active-filters, .faceted-navigation-header__filter-link { display: -webkit-box; display: -ms-flexbox; display: flex; }
+.faceted-navigation-header__header-top, .faceted-navigation-header__header-bottom { display: -webkit-box; display: -ms-flexbox; display: flex; }
 
-.faceted-navigation-header__sort-options, .faceted-navigation-header__filters-actions { margin-left: auto; }
+.faceted-navigation-header__filter-link, .faceted-navigation-header __active-filters { display: inline-block; }
 
-.faceted-navigation-header__header-bottom { margin-top: 28px; }
+.faceted-navigation-header__active-filters { width: 100%; }
+
+.faceted-navigation-header__sort-options, .faceted-navigation-header__filters-actions { margin-left: auto; min-width: 85px; }
+
+.faceted-navigation-header__header-bottom { margin-top: 70px; }
 
 .faceted-navigation-header__header-top { border-bottom: 2px solid #F8F8F8; padding-bottom: 28px; }
 
 .faceted-navigation-header__title { font-size: 20px; font-weight: bold; }
 
-.faceted-navigation-header__filter-link { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; margin-right: 2rem; }
+.faceted-navigation-header__filter-link { -webkit-box-align: top; -ms-flex-align: top; align-items: top; /*display: flex;*/ margin-right: 12px; }
 
-.faceted-navigation-header__filter-link .icon { font-size: 10px; margin-right: 1rem; }
+.faceted-navigation-header__filter-link .icon { font-size: 10px; margin-right: 2px; margin-top: 5px; }
 
-.faceted-navigation__mobile-facet-container { display: none; position: absolute; top: 0; left: 0; }
+.faceted-navigation__mobile-facet-container .faceted-navigation { padding: 0 30px; }
+
+.autocorrected-search { margin-top: 20px; font-size: 20px; }
+
+.faceted-navigation { position: relative; }
+
+.faceted-navigation__mobile-facet-container { z-index: 9999; background-color: #fff; margin-top: 20px; }
+
+.faceted-navigation__mobile-facet-container.enabled { position: absolute; top: 0; left: 0; padding: 0; }
+
+.faceted-navigation__mobile-facet-container .b-button { width: 100%; text-align: center; max-width: initial; }
+
+.faceted-navigation .hidden { display: none; }
+
+.faceted-navigation .visibile { display: block; }
+
+.faceted-navigation .mobile-header { position: absolute; top: -90px; height: 53px; font-size: 18px; left: 0; color: #fff; background-color: #666; width: 100%; padding: 15px 30px 0 30px; }
+
+.faceted-navigation .mobile-header i { position: absolute; display: block; right: 30px; top: 17px; }
+
+.faceted-navigation .mobile-header a { color: #fff; }
+
+.faceted-navigation .mobile-done { width: 100%; background-color: #005EB8; position: absolute; bottom: 0; left: 0; }
 
 .faceted-navigation__group { border-bottom: 1px solid #e6e6e6; }
 
@@ -393,7 +343,7 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .faceted-navigation__header.button--reset, .faceted-navigation__view-more-facets button { width: 100%; text-align: left; margin: 14px 0; cursor: pointer; }
 
-.faceted-navigation__header.button--reset .icon::before, .faceted-navigation__view-more-facets button .icon::before { position: absolute; right: 15px; color: #005EB8; font-size: 12px; margin-top: 6px; }
+.faceted-navigation__header.button--reset .icon::before, .faceted-navigation__view-more-facets button .icon::before { position: absolute; right: 33px; color: #005EB8; font-size: 12px; margin-top: 6px; }
 
 .faceted-navigation__view-more-facets button { color: #005EB8; }
 
@@ -481,21 +431,47 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .faceted-navigation-header { margin-bottom: 28px; }
 
-.faceted-navigation-header__header-top, .faceted-navigation-header__header-bottom, .faceted-navigation-header__active-filters, .faceted-navigation-header__filter-link { display: -webkit-box; display: -ms-flexbox; display: flex; }
+.faceted-navigation-header__header-top, .faceted-navigation-header__header-bottom { display: -webkit-box; display: -ms-flexbox; display: flex; }
 
-.faceted-navigation-header__sort-options, .faceted-navigation-header__filters-actions { margin-left: auto; }
+.faceted-navigation-header__filter-link, .faceted-navigation-header __active-filters { display: inline-block; }
 
-.faceted-navigation-header__header-bottom { margin-top: 28px; }
+.faceted-navigation-header__active-filters { width: 100%; }
+
+.faceted-navigation-header__sort-options, .faceted-navigation-header__filters-actions { margin-left: auto; min-width: 85px; }
+
+.faceted-navigation-header__header-bottom { margin-top: 70px; }
 
 .faceted-navigation-header__header-top { border-bottom: 2px solid #F8F8F8; padding-bottom: 28px; }
 
 .faceted-navigation-header__title { font-size: 20px; font-weight: bold; }
 
-.faceted-navigation-header__filter-link { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; margin-right: 2rem; }
+.faceted-navigation-header__filter-link { -webkit-box-align: top; -ms-flex-align: top; align-items: top; /*display: flex;*/ margin-right: 12px; }
 
-.faceted-navigation-header__filter-link .icon { font-size: 10px; margin-right: 1rem; }
+.faceted-navigation-header__filter-link .icon { font-size: 10px; margin-right: 2px; margin-top: 5px; }
 
-.faceted-navigation__mobile-facet-container { display: none; position: absolute; top: 0; left: 0; }
+.faceted-navigation__mobile-facet-container .faceted-navigation { padding: 0 30px; }
+
+.autocorrected-search { margin-top: 20px; font-size: 20px; }
+
+.faceted-navigation { position: relative; }
+
+.faceted-navigation__mobile-facet-container { z-index: 9999; background-color: #fff; margin-top: 20px; }
+
+.faceted-navigation__mobile-facet-container.enabled { position: absolute; top: 0; left: 0; padding: 0; }
+
+.faceted-navigation__mobile-facet-container .b-button { width: 100%; text-align: center; max-width: initial; }
+
+.faceted-navigation .hidden { display: none; }
+
+.faceted-navigation .visibile { display: block; }
+
+.faceted-navigation .mobile-header { position: absolute; top: -90px; height: 53px; font-size: 18px; left: 0; color: #fff; background-color: #666; width: 100%; padding: 15px 30px 0 30px; }
+
+.faceted-navigation .mobile-header i { position: absolute; display: block; right: 30px; top: 17px; }
+
+.faceted-navigation .mobile-header a { color: #fff; }
+
+.faceted-navigation .mobile-done { width: 100%; background-color: #005EB8; position: absolute; bottom: 0; left: 0; }
 
 .faceted-navigation__group { border-bottom: 1px solid #e6e6e6; }
 
@@ -503,7 +479,7 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .faceted-navigation__header.button--reset, .faceted-navigation__view-more-facets button { width: 100%; text-align: left; margin: 14px 0; cursor: pointer; }
 
-.faceted-navigation__header.button--reset .icon::before, .faceted-navigation__view-more-facets button .icon::before { position: absolute; right: 15px; color: #005EB8; font-size: 12px; margin-top: 6px; }
+.faceted-navigation__header.button--reset .icon::before, .faceted-navigation__view-more-facets button .icon::before { position: absolute; right: 33px; color: #005EB8; font-size: 12px; margin-top: 6px; }
 
 .faceted-navigation__view-more-facets button { color: #005EB8; }
 
@@ -694,82 +670,6 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
   .eaton-product-tabs label .icon { font-size: 4rem; }
   .eaton-product-tabs label span { font-size: 1.4rem; }
   .eaton-product-tabs--fixed .eaton-product-tabs__buttons { top: 84px; margin-left: -15px; margin-right: -15px; } }
-
-.icon::before { -moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: antialiased; -webkit-box-sizing: border-box; box-sizing: border-box; display: inline-block; font-family: "eaton-glyphicon"; font-smoothing: antialiased; font-style: normal; font-variant: normal; font-weight: normal; line-height: 1; text-decoration: inherit; text-rendering: optimizeLegibility; text-transform: none; }
-
-.icon-badge::before { content: "\EA01"; }
-
-.icon-book::before { content: "\EA02"; }
-
-.icon-bulb::before { content: "\EA03"; }
-
-.icon-calendar::before { content: "\EA04"; }
-
-.icon-chevron-down::before { content: "\EA05"; }
-
-.icon-chevron-left::before { content: "\EA06"; }
-
-.icon-chevron-right::before { content: "\EA07"; }
-
-.icon-close::before { content: "\EA08"; }
-
-.icon-doc-badge::before { content: "\EA09"; }
-
-.icon-doc-download::before { content: "\EA0A"; }
-
-.icon-doc-text::before { content: "\EA0B"; }
-
-.icon-download::before { content: "\EA0C"; }
-
-.icon-globe::before { content: "\EA0D"; }
-
-.icon-hamburger::before { content: "\EA0E"; }
-
-.icon-headset::before { content: "\EA0F"; }
-
-.icon-help::before { content: "\EA10"; }
-
-.icon-info::before { content: "\EA11"; }
-
-.icon-link-external::before { content: "\EA12"; }
-
-.icon-list-checkmark::before { content: "\EA13"; }
-
-.icon-list-items::before { content: "\EA14"; }
-
-.icon-checklist::before { content: "\EA15"; }
-
-.icon-marker::before { content: "\EA16"; }
-
-.icon-phone::before { content: "\EA17"; }
-
-.icon-plane::before { content: "\EA18"; }
-
-.icon-player-pause::before { content: "\EA19"; }
-
-.icon-player-play::before { content: "\EA1A"; }
-
-.icon-quote-dark::before { content: "\EA1B"; }
-
-.icon-quote-light::before { content: "\EA1C"; }
-
-.icon-search-minus::before { content: "\EA1D"; }
-
-.icon-search-plus::before { content: "\EA1E"; }
-
-.icon-search::before { content: "\EA1F"; }
-
-.icon-shopping-cart::before { content: "\EA20"; }
-
-.icon-sign-minus::before { content: "\EA21"; }
-
-.icon-sign-plus::before { content: "\EA22"; }
-
-.icon-tiles::before { content: "\EA23"; }
-
-.icon-tree::before { content: "\EA24"; }
-
-.icon-user::before { content: "\EA25"; }
 
 .icon::before { -moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: antialiased; -webkit-box-sizing: border-box; box-sizing: border-box; display: inline-block; font-family: "eaton-glyphicon"; font-smoothing: antialiased; font-style: normal; font-variant: normal; font-weight: normal; line-height: 1; text-decoration: inherit; text-rendering: optimizeLegibility; text-transform: none; }
 
